<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal"
    android:showDividers="middle"
    android:divider="@color/black"
    android:background="@drawable/bg_item">

    <TextView
        android:id="@+id/lend_title_order"
        android:layout_width="96dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_order"
        android:textColor="@color/color_text_black_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lend_title_source"
        android:layout_width="112dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_lend_source"
        android:textColor="@color/color_text_black_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lend_title_archive_name"
        android:layout_width="96dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_archive_name"
        android:textColor="@color/color_text_black_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lend_title_person"
        android:layout_width="112dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_base_person"
        android:textColor="@color/color_text_black_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>