<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_bottom_dialog">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/label_category"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/label_archive_category"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            android:background="@drawable/selector_et_bg"
            app:layout_constraintBottom_toBottomOf="@id/label_category"
            app:layout_constraintLeft_toLeftOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_category" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/label_archive_name"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guide"
            app:layout_constraintTop_toBottomOf="@id/label_category" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:background="@drawable/selector_et_bg"
            android:inputType="text"
            android:autofillHints="@null"
            android:hint="@null"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/label_name"
            app:layout_constraintLeft_toLeftOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_name" />

        <TextView
            android:id="@+id/label_brand"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/label_archive_brand"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guide"
            app:layout_constraintTop_toBottomOf="@id/label_name" />

        <EditText
            android:id="@+id/brand"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:background="@drawable/selector_et_bg"
            android:inputType="text"
            android:autofillHints="@null"
            android:hint="@null"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/label_brand"
            app:layout_constraintLeft_toLeftOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_brand" />

        <TextView
            android:id="@+id/label_spec"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/label_archive_spec"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guide"
            app:layout_constraintTop_toBottomOf="@id/label_brand" />

        <EditText
            android:id="@+id/spec"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:background="@drawable/selector_et_bg"
            android:inputType="text"
            android:autofillHints="@null"
            android:hint="@null"
            android:textColor="@color/color_text_black_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/label_spec"
            app:layout_constraintLeft_toLeftOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_spec" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:text="@string/label_cancel"
            android:textColor="@color/color_text_black_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/label_spec"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/confirm"/>

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:letterSpacing="0.5"
            android:text="@string/label_confirm"
            android:textColor="@color/text_red_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/cancel"
            app:layout_constraintLeft_toRightOf="@id/cancel"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>